Reorganization of several packages. Preparation for the big renaming
(xxx.gama.yyy -> gama.yyy), and a probable jump to version 2.0...