@@ -24,10 +24,10 @@ import org.locationtech.jts.io.ParseException;
 import org.locationtech.jts.io.WKTReader;
 
 import msi.gama.metamodel.topology.projection.IProjection;
-import msi.gama.runtime.IScope;
 import msi.gama.runtime.exceptions.GamaRuntimeException;
-import msi.gama.util.GamaListFactory;
-import msi.gama.util.IList;
+import msi.gama.runtime.scope.IScope;
+import msi.gama.util.list.GamaListFactory;
+import msi.gama.util.list.IList;
 import ummisco.gama.dev.utils.DEBUG;
 
 /*
@@ -63,24 +63,14 @@ class MSSQLConnection extends SqlConnection {
 				// DriverManager.getConnection("jdbc:sqlserver://" + url + ":" +
 				// port + ";databaseName=" + dbName +
 				// ";user=" + userName + ";password=" + password + ";");
-				Class.forName(MSSQLDriver).newInstance();
+				Class.forName(MSSQLDriver).getConstructor().newInstance();
 				conn = DriverManager.getConnection("jdbc:jtds:sqlserver://" + url + ":" + port + "/" + dbName, userName,
 						password);
-			} else {
+			} else
 				throw new ClassNotFoundException("MSSQLConnection.connectDB: The " + vender + " is not supported!");
-			}
-		} catch (final ClassNotFoundException e) {
+		} catch (final Exception e) {
 			e.printStackTrace();
 			throw new ClassNotFoundException(e.toString());
-		} catch (final InstantiationException e) {
-			e.printStackTrace();
-			throw new InstantiationException(e.toString());
-		} catch (final IllegalAccessException e) {
-			e.printStackTrace();
-			throw new IllegalAccessException(e.toString());
-		} catch (final SQLException e) {
-			e.printStackTrace();
-			throw new SQLException(e.toString());
 		}
 		return conn;
 
@@ -150,9 +140,8 @@ class MSSQLConnection extends SqlConnection {
 		String colStr = "";
 		String valueStr = "";
 		// Check size of parameters
-		if (values.size() != col_no) {
+		if (values.size() != col_no)
 			throw new IndexOutOfBoundsException("Size of columns list and values list are not equal");
-		}
 		// Get column name
 		for (int i = 0; i < col_no; i++) {
 			if (i == col_no - 1) {
@@ -267,9 +256,8 @@ class MSSQLConnection extends SqlConnection {
 			final IList<Object> col_Types = getColumnTypeName(rsmd);
 			final int col_no = col_Names.size();
 			// Check size of parameters
-			if (values.size() != col_Names.size()) {
+			if (values.size() != col_Names.size())
 				throw new IndexOutOfBoundsException("Size of columns list and values list are not equal");
-			}
 
 			// Insert command
 			// set parameter value
