@@ -26,10 +26,10 @@ import org.locationtech.jts.io.WKTReader;
 import org.sqlite.SQLiteConfig;
 
 import msi.gama.metamodel.topology.projection.IProjection;
-import msi.gama.runtime.IScope;
 import msi.gama.runtime.exceptions.GamaRuntimeException;
-import msi.gama.util.GamaListFactory;
-import msi.gama.util.IList;
+import msi.gama.runtime.scope.IScope;
+import msi.gama.util.list.GamaListFactory;
+import msi.gama.util.list.IList;
 import ummisco.gama.dev.utils.DEBUG;
 
 /*
@@ -62,7 +62,7 @@ class SqliteConnection extends SqlConnection {
 		Connection conn = null;
 		try {
 			if (vender.equalsIgnoreCase(SQLITE)) {
-				Class.forName(SQLITEDriver).newInstance();
+				Class.forName(SQLITEDriver).getConstructor().newInstance();
 				final SQLiteConfig config = new SQLiteConfig();
 				config.enableLoadExtension(true);
 				conn = DriverManager.getConnection("jdbc:sqlite:" + dbName, config.toProperties());
@@ -70,21 +70,11 @@ class SqliteConnection extends SqlConnection {
 				if (extension != null && new File(extension).exists()) {
 					load_extension(conn, extension);
 				}
-			} else {
+			} else
 				throw new ClassNotFoundException("SqliteConnection.connectSQL: The " + vender + " is not supported!");
-			}
-		} catch (final ClassNotFoundException e) {
+		} catch (final Exception e) {
 			e.printStackTrace();
 			throw new ClassNotFoundException(e.toString());
-		} catch (final InstantiationException e) {
-			e.printStackTrace();
-			throw new InstantiationException(e.toString());
-		} catch (final IllegalAccessException e) {
-			e.printStackTrace();
-			throw new IllegalAccessException(e.toString());
-		} catch (final SQLException e) {
-			e.printStackTrace();
-			throw new SQLException(e.toString());
 		}
 		return conn;
 
@@ -157,9 +147,8 @@ class SqliteConnection extends SqlConnection {
 		String colStr = "";
 		String valueStr = "";
 		// Check size of parameters
-		if (values.size() != col_no) {
+		if (values.size() != col_no)
 			throw new IndexOutOfBoundsException("Size of columns list and values list are not equal");
-		}
 		// Get column name
 		for (int i = 0; i < col_no; i++) {
 			if (i == col_no - 1) {
@@ -255,9 +244,8 @@ class SqliteConnection extends SqlConnection {
 
 			final int col_no = col_Names.size();
 			// Check size of parameters
-			if (values.size() != col_Names.size()) {
+			if (values.size() != col_Names.size())
 				throw new IndexOutOfBoundsException("Size of columns list and values list are not equal");
-			}
 
 			if (DEBUG.IS_ON()) {
 				DEBUG.OUT("list of column Name:" + col_Names);
